fixed wrong api calls